Archive2/4a/bfaa8db102995a/output
main.cpp:20:6: error: unused variable 'item' [-Werror,-Wunused-variable]
auto item = [] (auto range) {
     ^
1 error generated.
